commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartpointscollectiondata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartpointscollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartPointsCollectionData:interface'
-    summary: 描述通过调用返回的数据的接口`chartPointsCollection.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartPointsCollectionData
-    fullName: Excel.Interfaces.ChartPointsCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartPointsCollectionData#items:member'
-  - uid: 'excel!Excel.Interfaces.ChartPointsCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.ChartPointData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartPointsCollectionData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartPointsCollectionData#items~0:complex'
-    name: 'Excel.Interfaces.ChartPointData[]'
-    fullName: 'Excel.Interfaces.ChartPointData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.ChartPointData:interface'
-        name: Excel.Interfaces.ChartPointData
-        fullName: Excel.Interfaces.ChartPointData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.ChartPointsCollectionData
+uid: excel!Excel.Interfaces.ChartPointsCollectionData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartPointsCollectionData
+summary: 描述通过调用返回的数据的接口 `chartPointsCollection.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.ChartPointsCollectionData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.ChartPointData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartPointData:interface" />[]
+metadata:
+  ms.openlocfilehash: 560cc087119c58607da481ba6d81f437c0339398
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49245324"
