--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartpointupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartpointupdatedata.yml
@@ -1,137 +1,130 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData:interface'
-    summary: '一个用于更新 ChartPoint 对象上的数据的接口，可用于`chartPoint.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ChartPointUpdateData
-    fullName: Excel.Interfaces.ChartPointUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartPointUpdateData#dataLabel:member'
-      - 'excel!Excel.Interfaces.ChartPointUpdateData#format:member'
-      - 'excel!Excel.Interfaces.ChartPointUpdateData#hasDataLabel:member'
-      - 'excel!Excel.Interfaces.ChartPointUpdateData#markerBackgroundColor:member'
-      - 'excel!Excel.Interfaces.ChartPointUpdateData#markerForegroundColor:member'
-      - 'excel!Excel.Interfaces.ChartPointUpdateData#markerSize:member'
-      - 'excel!Excel.Interfaces.ChartPointUpdateData#markerStyle:member'
-  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData#dataLabel:member'
-    summary: |-
-      返回图表点的数据标签。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartPointUpdateData
+uid: excel!Excel.Interfaces.ChartPointUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartPointUpdateData
+summary: 一个用于更新 ChartPoint 对象上的数据的接口，可用于 `chartPoint.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: dataLabel
+  uid: excel!Excel.Interfaces.ChartPointUpdateData#dataLabel:member
+  package: excel!
+  fullName: dataLabel
+  summary: >-
+    返回图表点的数据标签。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: dataLabel
-    fullName: dataLabel
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'dataLabel?: Excel.Interfaces.ChartDataLabelUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartDataLabelUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData#format:member'
-    summary: |-
-      封装图表点的格式属性。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ChartPointFormatUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartPointFormatUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData#hasDataLabel:member'
-    summary: |-
-      表示数据点是否具有数据标签。 不适用于曲面图。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'dataLabel?: Excel.Interfaces.ChartDataLabelUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartDataLabelUpdateData:interface" />
+- name: format
+  uid: excel!Excel.Interfaces.ChartPointUpdateData#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    封装图表点的格式属性。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: hasDataLabel
-    fullName: hasDataLabel
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'hasDataLabel?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData#markerBackgroundColor:member'
-    summary: |-
-      数据点的标记背景色的 HTML 颜色代码表示形式（例如， \# FF0000 表示红色）。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: markerBackgroundColor
-    fullName: markerBackgroundColor
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'markerBackgroundColor?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData#markerForegroundColor:member'
-    summary: |-
-      数据点的标记前景色的 HTML 颜色代码表示形式（例如， \# FF0000 表示红色）。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ChartPointFormatUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartPointFormatUpdateData:interface" />
+- name: hasDataLabel
+  uid: excel!Excel.Interfaces.ChartPointUpdateData#hasDataLabel:member
+  package: excel!
+  fullName: hasDataLabel
+  summary: >-
+    表示数据点是否具有数据标签。 不适用于曲面图。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: markerForegroundColor
-    fullName: markerForegroundColor
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'markerForegroundColor?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData#markerSize:member'
-    summary: |-
-      表示数据点的标记大小。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: markerSize
-    fullName: markerSize
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'markerSize?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData#markerStyle:member'
-    summary: |-
-      表示图表数据点的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'hasDataLabel?: boolean;'
+    return:
+      type: boolean
+- name: markerBackgroundColor
+  uid: excel!Excel.Interfaces.ChartPointUpdateData#markerBackgroundColor:member
+  package: excel!
+  fullName: markerBackgroundColor
+  summary: >-
+    数据点的标记背景色的 HTML 颜色代码表示形式 (例如， \# FF0000 表示红色) 。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: markerStyle
-    fullName: markerStyle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'markerStyle?: Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartPointUpdateData#markerStyle~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelUpdateData:interface'
-    name: Excel.Interfaces.ChartDataLabelUpdateData
-  - uid: 'excel!Excel.Interfaces.ChartPointFormatUpdateData:interface'
-    name: Excel.Interfaces.ChartPointFormatUpdateData
-  - uid: 'excel!Excel.Interfaces.ChartPointUpdateData#markerStyle~0:complex'
-    name: Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"
-    fullName: Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"
-    spec.typeScript:
-      - uid: 'excel!Excel.ChartMarkerStyle:enum'
-        name: Excel.ChartMarkerStyle
-        fullName: Excel.ChartMarkerStyle
-      - name: ' | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"'
-        fullName: ' | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"'
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'markerBackgroundColor?: string;'
+    return:
+      type: string
+- name: markerForegroundColor
+  uid: excel!Excel.Interfaces.ChartPointUpdateData#markerForegroundColor:member
+  package: excel!
+  fullName: markerForegroundColor
+  summary: >-
+    数据点的标记前景色的 HTML 颜色代码表示形式 (例如， \# FF0000 表示红色) 。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'markerForegroundColor?: string;'
+    return:
+      type: string
+- name: markerSize
+  uid: excel!Excel.Interfaces.ChartPointUpdateData#markerSize:member
+  package: excel!
+  fullName: markerSize
+  summary: >-
+    表示数据点的标记大小。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'markerSize?: number;'
+    return:
+      type: number
+- name: markerStyle
+  uid: excel!Excel.Interfaces.ChartPointUpdateData#markerStyle:member
+  package: excel!
+  fullName: markerStyle
+  summary: >-
+    表示图表数据点的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'markerStyle?: Excel.ChartMarkerStyle | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture";'
+    return:
+      type: <xref uid="excel!Excel.ChartMarkerStyle:enum" /> | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"
+metadata:
+  ms.openlocfilehash: 5737469fc5cae0382ab85641673cf2e949a4d59c
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49245261"
