--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlinecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlinecollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionUpdateData:interface'
-    summary: '一个用于更新 ChartTrendlineCollection 对象上的数据的接口，可用于`chartTrendlineCollection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ChartTrendlineCollectionUpdateData
-    fullName: Excel.Interfaces.ChartTrendlineCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartTrendlineCollectionUpdateData#items:member'
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.ChartTrendlineData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartTrendlineCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionUpdateData#items~0:complex'
-    name: 'Excel.Interfaces.ChartTrendlineData[]'
-    fullName: 'Excel.Interfaces.ChartTrendlineData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.ChartTrendlineData:interface'
-        name: Excel.Interfaces.ChartTrendlineData
-        fullName: Excel.Interfaces.ChartTrendlineData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.ChartTrendlineCollectionUpdateData
+uid: excel!Excel.Interfaces.ChartTrendlineCollectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartTrendlineCollectionUpdateData
+summary: 一个用于更新 ChartTrendlineCollection 对象上的数据的接口，可用于 `chartTrendlineCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.ChartTrendlineCollectionUpdateData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.ChartTrendlineData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartTrendlineData:interface" />[]
+metadata:
+  ms.openlocfilehash: a264df709933f674188abfd0cad79a077b9ec076
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49245037"
